# hip-sys

./: Cargo.toml
hip-runtime-sys/: Cargo.toml  wrapper.h
hip-runtime-sys/src/: bindings.rs
hipblas-sys/: Cargo.toml  build.rs
hiprtc-sys/: Cargo.toml  build.rs  wrapper.h
hiprtc-sys/src/: bindings.rs
src/: lib.rs
