[package]
name = "hip-runtime-sys"
version = "0.2.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cjordan/hip-sys"
description = "Bindings for the HIP runtime"
links = "amdhip64"

[dependencies]
libc = "0.2.73"

[build-dependencies]
bindgen = { version = "0.69.4", optional = true }
